# Template_in_action

./: .gitignore  CMakeLists.txt  LICENSE  README.md  max_element_template.cpp  template_params_single.cpp
